# ecommerce-project

./: .env.example  .gitignore  README.md  docker-compose.yml  stack-compose.yml
ecommerce-fastapi/: Dockerfile  README.md  STRUCTURE.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  start.ps1
ecommerce-fastapi/app/: main.py
ecommerce-fastapi/app/application/services/: auth_service.py  cart_service.py  category_service.py  coupon_service.py  order_service.py  payment_service.py  product_service.py  review_service.py  user_service.py
ecommerce-fastapi/app/config/: settings.py
ecommerce-fastapi/app/domain/: enums.py  exceptions.py
ecommerce-fastapi/app/domain/entities/: cart.py  category.py  coupon.py  order.py  payment.py  product.py  review.py  user.py
ecommerce-fastapi/app/domain/ports/: cart_repository.py  category_repository.py  coupon_repository.py  order_repository.py  payment_repository.py  product_repository.py  review_repository.py  user_repository.py
ecommerce-fastapi/app/infrastructure/db/: __init__.py  base.py  session.py
ecommerce-fastapi/app/infrastructure/exceptions/: http_exception_handler.py
ecommerce-fastapi/app/infrastructure/logging/: __init__.py  config.py  formatter.py  handlers.py  logger.py
ecommerce-fastapi/app/infrastructure/mappers/: cart_mapper.py  (+5 more)
ecommerce-fastapi/app/seeds/: seeder_handler.py
ecommerce-fastapi/app/utils/: slug_handler.py
ecommerce-fastapi/tests/: add_test_product.py  conftest.py  test_cart_service.py  test_order_service.py  test_payment_service.py  test_product_service.py
(+243 files in other folders)
